--- a/src/scss/backend/components/form_fields.scss
+++ b/src/scss/backend/components/form_fields.scss
@@ -1676,15 +1676,16 @@ label .invalid-feedback {
   border: 1px solid #9e9e9e;
 }
 
-.merge-field.is-signature,
-.text-editor-merge-field.is-signature {
-  color: #bdbdbd;
+.merge-field.is-no-value-set,
+.text-editor-merge-field.is-no-value-set {
+  color: #9e9e9e;
   background-color: #fff;
-  border: 1px solid #bdbdbd;
+  border: 1px solid #9e9e9e;
+  text-decoration: line-through;
 }
 
-.merge-field.is-signature.is-selected,
-.text-editor-merge-field.is-signature.is-selected {
+.merge-field.is-no-value-set.is-selected,
+.text-editor-merge-field.is-no-value-set.is-selected {
   color: #fff;
   background-color: #9e9e9e;
   border: 1px solid #9e9e9e;
