--- a/src/scss/backend/components/froala_editor.scss
+++ b/src/scss/backend/components/froala_editor.scss
@@ -166,6 +166,10 @@
     Signature Table
 --------------------*/
 
+.ef-theme .fr-view .signature-pad-link {
+  border: 1px solid #9e9e9e;
+}
+
 .ef-theme .fr-view .must-break {
   border-bottom: 2px dotted #ccc;
   margin: 0 0 20px;
