Changed modal scrollable-tabs position to absolute and bump version 0.1.27

--- a/src/scss/backend/components/modal.scss
+++ b/src/scss/backend/components/modal.scss
@@ -339,7 +339,7 @@
 }
 
 .modal-tabs .modal-body>.scrollable-tabs {
-  position: fixed;
+  position: absolute;
   width: calc(100% - 2px);
   z-index: 10;
 }
