Show scrollbar when hover ember-table and bump version 0.1.30

--- a/src/scss/backend/components/ember_table.scss
+++ b/src/scss/backend/components/ember_table.scss
@@ -350,9 +350,14 @@
 .ember-table-body-container .antiscroll-box {
   width: 100%;
   height: 100%;
+  overflow: hidden;
+}
+
+.ember-table-body-container .antiscroll-box:hover {
   overflow: scroll;
 }
 
+// use built-in scrollbar
 .ember-table-body-container.antiscroll-wrap .antiscroll-scrollbar-horizontal,
 .ember-table-body-container.antiscroll-wrap .antiscroll-scrollbar-vertical {
   display: none !important;
