--- a/src/scss/backend/components/form_fields.scss
+++ b/src/scss/backend/components/form_fields.scss
@@ -296,7 +296,7 @@ select::-ms-expand {
 }
 
 [class*="col-"] .form-group .dropdown-selected  {
-  height: calc(2.25rem + 2px);
+  height: 34px;
   padding: 4px 0;
 }
 
