Hide all "antiscroll-scrollbar-horizontal" except first one and bump version 0.1.39

--- a/src/scss/backend/components/ember_table.scss
+++ b/src/scss/backend/components/ember_table.scss
@@ -364,7 +364,7 @@
   height: 13px;
 }
 
-.ember-table-body-container.antiscroll-wrap .antiscroll-scrollbar-horizontal+.antiscroll-scrollbar-horizontal {
+.ember-table-body-container.antiscroll-wrap .antiscroll-scrollbar-horizontal:not(:first-child) {
   display: none;
 }
 
