--- a/src/scss/backend/components/list_page.scss
+++ b/src/scss/backend/components/list_page.scss
@@ -4,6 +4,22 @@
   font-size: 0;
 }
 
+.list-page-container.has-navigation {
+  padding-top: 48px;
+}
+
+.report-list-page .navigation-main {
+  top: 0;
+  visibility: visible;
+  z-index: 1;
+}
+
+@media (max-width: 767.98px) {
+  .report-list-page .navigation-main {
+    display: none;
+  }
+}
+
 .list-page-header {
   position: relative;
   background: #f2f2f2;
