Fixed list-page navigation and bump version 0.1.47

--- a/src/scss/backend/components/list_page.scss
+++ b/src/scss/backend/components/list_page.scss
@@ -8,14 +8,14 @@
   padding-top: 48px;
 }
 
-.report-list-page .navigation-main {
+.list-page-container .navigation-main {
   top: 0;
   visibility: visible;
   z-index: 1;
 }
 
 @media (max-width: 767.98px) {
-  .report-list-page .navigation-main {
+  .list-page-container .navigation-main {
     display: none;
   }
 }
