Remove padding when viewing list-page with navigation and bump version 0.1.49

--- a/src/scss/backend/components/list_page.scss
+++ b/src/scss/backend/components/list_page.scss
@@ -15,6 +15,10 @@
 }
 
 @media (max-width: 767.98px) {
+  .list-page-container.has-navigation {
+    padding-top: 0;
+  }
+
   .list-page-container .navigation-main {
     display: none;
   }
