Force drawer-frame z-index on reports and bump version 0.1.57

--- a/src/scss/backend/pages/reports.scss
+++ b/src/scss/backend/pages/reports.scss
@@ -1,9 +1,9 @@
-.reports-page {
-  height: 100%;
+.drawer-frame {
+  z-index: 2;
 }
 
-.reports-page .drawer-frame {
-  z-index: 2;
+.reports-page {
+  height: 100%;
 }
 
 .reports-page .chart-container {
