--- a/src/scss/backend/pages/dashboard.scss
+++ b/src/scss/backend/pages/dashboard.scss
@@ -328,6 +328,8 @@
   flex-grow: 1;
   flex-shrink: 1;
   flex-basis: 0;
+  height: -webkit-calc(100% - 20px);
+  height: calc(100% - 20px);
 }
 
 .dashboard-report-stats {
