--- a/src/scss/backend/components/card.scss
+++ b/src/scss/backend/components/card.scss
@@ -20,6 +20,12 @@
   flex: 1 1 auto;
 }
 
+.card-content .list-spinner {
+  display: block;
+  position: relative;
+  top: 50%;
+}
+
 @media (min-width: 768px) {
   .card-indent {
     padding: 24px;
