--- a/src/scss/backend/components/spinner.scss
+++ b/src/scss/backend/components/spinner.scss
@@ -44,3 +44,54 @@
 .circle-spinner.circle-spinner-white {
   border-color: #fff;
 }
+
+.list-spinner {
+  font-size: 0;
+  text-align: center;
+}
+
+.list-spinner-dot {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: #DCE3E6;
+  display: inline-block;
+  -webkit-animation: list-spinner-dot 1.4s infinite ease-in-out;
+  animation: list-spinner-dot 1.4s infinite ease-in-out;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
+
+.list-spinner-dot:nth-child(1) {
+  -webkit-animation-delay: -.32s;
+  animation-delay: -.32s;
+}
+
+.list-spinner-dot:nth-child(2) {
+  -webkit-animation-delay: -.12s;
+  animation-delay: -.12s;
+}
+
+.list-spinner-dot+.list-spinner-dot {
+  margin-left: 4px;
+}
+
+@-webkit-keyframes list-spinner-dot {
+  0%,100%,80% {
+    -webkit-transform: scale(0);
+  }
+
+  40% {
+    -webkit-transform: scale(1);
+  }
+}
+
+@keyframes list-spinner-dot {
+  0%,100%,80% {
+    transform: scale(0);
+  }
+
+  40% {
+    transform: scale(1);
+  }
+}
