--- a/src/scss/backend/components/ember_table.scss
+++ b/src/scss/backend/components/ember_table.scss
@@ -384,7 +384,15 @@
 
 .ember-table-body-container .ember-table-table-row.ember-table-hover,
 .ember-table-body-container .ember-table-table-row:hover {
-  background-color: #e5edf8;
+  background-color: rgba(13,148,246,0.04);
+}
+
+.ember-table-body-container .ember-table-table-row.ember-table-totals {
+  background-color: #4caf50 !important;
+}
+
+.ember-table-body-container .ember-table-table-row.ember-table-totals .ember-table-cell {
+  color: #fff !important;
 }
 
 .ember-table-body-container .ember-table-table-row.ember-table-selected {
@@ -730,11 +738,6 @@
 }
 .ember-view .ember-table-header-container .ember-table-right-table-block .ember-table-table-row {
   overflow-x: unset;
-}
-
-.ember-table-body-container .ember-table-table-row.ember-table-hover,
-.ember-table-body-container .ember-table-table-row:hover {
-  background-color: rgba(13,148,246,0.04);
 }
 
 /*------------------------------------*\
