Added additional table cell types and bump version 0.1.83

--- a/src/scss/backend/components/ember_table.scss
+++ b/src/scss/backend/components/ember_table.scss
@@ -689,9 +689,12 @@
 .ember-table-table-row.ember-table-selected .table-cell-date,
 .ember-table-table-row.ember-table-selected .table-cell-datetime,
 .ember-table-table-row.ember-table-selected .table-cell-money,
+.ember-table-table-row.ember-table-selected .table-cell-money-rounded,
 .ember-table-table-row.ember-table-selected .table-cell-percent,
+.ember-table-table-row.ember-table-selected .table-cell-percent-rounded,
 .ember-table-table-row.ember-table-selected .table-cell-integer,
 .ember-table-table-row.ember-table-selected .table-cell-number,
+.ember-table-table-row.ember-table-selected .table-cell-number-rounded,
 .ember-table-table-row.ember-table-selected .table-cell-badge,
 .ember-table-table-row.ember-table-selected .table-cell-boolean,
 .ember-table-table-row.ember-table-selected .table-cell-text {
@@ -701,9 +704,12 @@
 .ember-table-table-row.ember-table-selected .table-cell-date.is-overdue,
 .ember-table-table-row.ember-table-selected .table-cell-datetime.is-overdue,
 .ember-table-table-row.ember-table-selected .table-cell-money.is-overdue,
+.ember-table-table-row.ember-table-selected .table-cell-money-rounded.is-overdue,
 .ember-table-table-row.ember-table-selected .table-cell-percent.is-overdue,
+.ember-table-table-row.ember-table-selected .table-cell-percent-rounded.is-overdue,
 .ember-table-table-row.ember-table-selected .table-cell-integer.is-overdue,
 .ember-table-table-row.ember-table-selected .table-cell-number.is-overdue,
+.ember-table-table-row.ember-table-selected .table-cell-number-rounded.is-overdue,
 .ember-table-table-row.ember-table-selected .table-cell-badge.is-overdue,
 .ember-table-table-row.ember-table-selected .table-cell-boolean.is-overdue,
 .ember-table-table-row.ember-table-selected .table-cell-text.is-overdue {
@@ -770,9 +776,12 @@
 .table-cell-date,
 .table-cell-datetime,
 .table-cell-money,
+.table-cell-money-rounded,
 .table-cell-percent,
+.table-cell-percent-rounded,
 .table-cell-integer,
 .table-cell-number,
+.table-cell-number-rounded,
 .table-cell-phone,
 .table-cell-badge,
 .table-cell-boolean,
@@ -790,9 +799,12 @@
 .table-cell-date,
 .table-cell-datetime,
 .table-cell-money,
+.table-cell-money-rounded,
 .table-cell-percent,
+.table-cell-percent-rounded,
 .table-cell-integer,
 .table-cell-number,
+.table-cell-number-rounded,
 .table-cell-badge,
 .table-cell-boolean,
 .table-cell-text {
@@ -802,9 +814,12 @@
 .table-cell-date.is-overdue,
 .table-cell-datetime.is-overdue,
 .table-cell-money.is-overdue,
+.table-cell-money-rounded.is-overdue,
 .table-cell-percent.is-overdue,
+.table-cell-percent-rounded.is-overdue,
 .table-cell-integer.is-overdue,
 .table-cell-number.is-overdue,
+.table-cell-number-rounded.is-overdue,
 .table-cell-badge.is-overdue,
 .table-cell-boolean.is-overdue,
 .table-cell-text.is-overdue {
