Fixed charts, upgraded highcharts and bump version 0.1.118

--- a/src/scss/backend/pages/dashboard.scss
+++ b/src/scss/backend/pages/dashboard.scss
@@ -349,6 +349,7 @@
 .dashboard-report-data-value {
   color: #363636;
   font-size: 28px;
+  white-space: nowrap;
 }
 
 .dashboard-report-positive-data-value {
