Fixed card and card-body style and bump version 0.1.120

--- a/src/scss/backend/components/card.scss
+++ b/src/scss/backend/components/card.scss
@@ -4,6 +4,9 @@
   border-radius: 2px;
   position: relative;
   overflow: initial;
+}
+
+.card-body {
   display: flex;
   flex-flow: column nowrap;
 }
