Fixed list-buttons-container with toggle height and bump version 0.1.128

--- a/src/scss/backend/components/list_page.scss
+++ b/src/scss/backend/components/list_page.scss
@@ -200,6 +200,7 @@
     right: 0;
     background: #f2f2f2;
     text-align: right;
+    height: calc(100% - 1px);
   }
 
   .list-page-header .list-buttons-container.has-toggle:not(.is-expanded)>.list-buttons-toggle-content {
