--- a/src/scss/backend/components/profile.scss
+++ b/src/scss/backend/components/profile.scss
@@ -35,12 +35,14 @@
   .profile-center {
     float: none;
     width: auto;
-    height: 60%;
+    height: 50%;
   }
 
   .profile-right {
-    height: 40%;
-    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 1px 6px rgba(0,0,0,0.12);
+    height: 50%;
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.12);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+    margin-left: 45%;
   }
 }
 
