--- a/src/scss/backend/pages/settings.scss
+++ b/src/scss/backend/pages/settings.scss
@@ -62,6 +62,12 @@
   }
 }
 
+@media (max-width: 575.98px) {
+  .settings-content-main {
+    padding-bottom: 100px;
+  }
+}
+
 .settings-content-title {
   color: #363636;
   display: block;
