--- a/src/scss/backend/layout/content.scss
+++ b/src/scss/backend/layout/content.scss
@@ -17,7 +17,7 @@
 
 @media (max-width: 991.98px) {
   .content-wrapper {
-    margin-left: 0 !important;
+    margin-left: 0;
   }
 
   .sidebar-collapsed .content-overlay {
