--- a/src/scss/backend/pages/settings.scss
+++ b/src/scss/backend/pages/settings.scss
@@ -19,8 +19,8 @@
 
 @media (max-width: 991.98px) {
   .settings-left-column {
-    left: 0 !important;
-    margin-left: 0 !important;
+    left: 0;
+    margin-left: 0;
   }
 }
 
