Fixed date range picker and bump version 0.1.138

--- a/src/scss/backend/components/form_fields.scss
+++ b/src/scss/backend/components/form_fields.scss
@@ -1490,6 +1490,10 @@ label .invalid-feedback {
   color: #ccc;
 }
 
+.calendar>.ui-datepicker .ui-datepicker-calendar td.ui-state-disabled span:hover {
+  background: transparent;
+}
+
 .calendar>.ui-datepicker .ui-datepicker-calendar td.ui-datepicker-today span {
   color: #0777c9;
   font-weight: 700;
