Implemented card table and bump version 0.1.150

--- a/src/scss/backend/index.scss
+++ b/src/scss/backend/index.scss
@@ -10,6 +10,7 @@
 @import "./components/modal";
 @import "./components/tab";
 @import "./components/ember_table";
+@import "./components/card_table";
 @import "./components/list_page";
 @import "./components/filter";
 @import "./components/drawer";
